--- a/index.html
+++ b/index.html
@@ -1,33 +1,21 @@
-<?php include('AWS_PHP.php') ?>
-
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Reg Test</title>
-        <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css">
-    </head>
-    <body>
-        <div class = "container shadow w-50 vh-60">
-            <div class = "row justify-content-center"> <!-- Main Container-->
-                <div><!-- Tile -->
-                    <h2>Input Page</h2>
-                </div>
-                <div><!-- Info -->
-                    <form method="post">
-                        <div><!-- Name -->
-                            <label>Name</label>
-                            <input type="text" class="form-control" name="Name"/>
-                        </div>
-                        <div> <!-- Email -->
-                            <label>Email</label>
-                            <input type="email" class="form-control" name="Email"/>
-                        </div>
-                        <div>
-                        <input type="submit" class="btn btn-primary" name="reg_user">
-                        </div>
-                    </form>
-                </div>
-            </div>
-        </div>
-    </body>
-</html>
+<head>
+<title>G7-Example</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+</head>
+<body>
+
+<header class="w3-padding">
+    <div class="w3-center">
+    <h4>Florida Atlantic University</h4>
+    <h1 class="w3-xxxlarge">EGN4950C Group 7 AWS Example</h1>
+      <div class="w3-padding-32">
+        <a href="https://aws.amazon.com/" target="_blank"><button class="w3-btn w3-xlarge w3-dark-grey w3-hover-light-grey" style="font-weight:900;">AWS Site</button></a>
+      </div>
+    <h2>Group Members</h2>
+    <h4>Peter Gonzalez<br>Nieves Hernandez<br>Aiyaan Nayani<br>Jeff Platel<br>Rodrigo Rocha Rabelo</h4>  
+    </div>
+  </header>
